# Syllabus-to-Study-Plan-MCP-Server

./: .gitignore  Dockerfile  README.md  mcpize.yaml  pyproject.toml  requirements.txt
.cursor/: mcp.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: client-setup.md  demo.md  integrations.md  marketplace.md
scripts/: test_local.py
syllabus_mcp/: exporters.py  extract.py  gcal.py  models.py  ocr.py  planner.py  server.py
tests/: test_extract.py  test_planner.py  test_server_tools.py
