[project]
name = "syllabus-to-study-plan-mcp"
version = "0.1.0"
description = "MCP server: syllabus PDF/text -> spaced repetition study plan -> JSON/ICS + Google Calendar + Notion"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "fastmcp>=3.0.0",
  "pydantic>=2.6.0",
  "python-dateutil>=2.9.0.post0",
  "pypdf>=4.0.0",
  "pdf2image>=1.17.0",
  "pytesseract>=0.3.10",
  "pillow>=10.2.0",
  "notion-client>=2.2.1,<3.0.0",
  "google-api-python-client>=2.120.0",
  "google-auth>=2.28.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
]

[project.scripts]
syllabus-mcp = "syllabus_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
]

